@startuml

entity users {
    * id BIGINT PRIMARY KEY
    --
    * is_admin BOOLEAN
    * active_status STRING
    ' active
    ' pending
    * nip BIGINT UNIQUE
    * full_name STRING
    * gender STRING
    * birth DATE
    * address STRING
    * ktp STRING
    * kk STRING
    * photo STRING
    password STRING
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity activation_log {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' acc
    ' rejected
    ' revoked
    * message TEXT
    --
    * user_id UNSIGNED_BIGINT FOUREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity umkm {
    * id BIGINT PRIMARY KEY
    --
    * name STRING
    * type STRING
    ' koperasi
    ' umkm
    * recomendation_docs STRING
    * status STRING
    ' verified
    ' pending
    ' rejected
    permission_docs STRING
    --
    * owner_user UNSIGNED_BIGINT FOUREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity umkm_activation_log {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' acc
    ' rejected
    ' revoked
    * message TEXT
    --
    * umkm_id UNSIGNED_BIGINT FOUREIGN(umkm_id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity umkm_images{
    * id BIGINT PRIMARY KEY
    --
    * image STRING
    * umkm_id UNSIGNED_BIGINT FOUREIGN(umkm.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity support_programs {
    * id BIGINT PRIMARY KEY
    --
    * program_type STRING
    * name STRING
    * description TEXT
    * active BOOLEAN
    quota INT
    open_date DATE
    end_date DATE
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity support_program_members {
    * id BIGINT PRIMARY KEY
    --
    * status STRING
    ' pending
    ' verified
    --
    * program_id UNSIGNED_BIGINT FOUREIGN(support_programs.id)
    * umkm_id UNSIGNED_BIGINT FOUREIGN(umkm.id)
    --
    * created_at DATETIME
    * updated_at DATETIME
}

entity user_notifications {
    * id BIGINT PRIMARY KEY
    --
    * title STRING
    * body TEXT
    * is_read BOOLEAN
    --
    * user_id UNSIGNED_BIGINT FOUREIGN(users.id)
    --
    * created_at DATETIME
    * updated_at DATETIME

}




users ||--o{ user_notifications
users ||--o{ umkm
users ||--o{ activation_log

support_programs ||--o{ support_program_members
umkm ||--o{ support_program_members

umkm ||--o{ umkm_images
umkm ||--o{ umkm_activation_log

@enduml